--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@lostpfg/puble",
-	"version": "0.2.11",
+	"version": "0.2.12-alpha.1",
 	"author": "Peter Fousteris",
 	"description": "Puble provides a set of React hooks and a service for a publish-subscribe pattern implementation using RxJS",
 	"keywords": [
