--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@lostpfg/puble",
-	"version": "0.2.12-alpha.1",
+	"version": "0.2.14",
 	"author": "Peter Fousteris",
 	"description": "Puble provides a set of React hooks and a service for a publish-subscribe pattern implementation using RxJS",
 	"keywords": [
@@ -69,5 +69,8 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"user": "^0.0.0"
+	}
 }
